reset some style
font and line-height

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -28,3 +28,9 @@ input, textarea, select {
 		-webkit-touch-callout: none;
 	}
 }
+
+.bobo-wrap {
+	font-family: sans-serif;
+	font-size: medium;
+	line-height: 1.5;
+}
