--- a/src/css/style.css
+++ b/src/css/style.css
@@ -29,8 +29,31 @@ input, textarea, select {
 	}
 }
 
+[hidden] {
+	display: none;
+}
+
+/* 如果是移动端页面，需要使用rem单位，可以放开下面注释，无需JS，?px/16进行转换，例如20px=1.25rem */
+/*@media screen and (min-width: 375px) {
+    html {
+        font-size: calc(100% + 2 * (100vw - 375px) / 39);
+        font-size: calc(16px + 2 * (100vw - 375px) / 39);
+    }
+}
+@media screen and (min-width: 414px) {
+    html {
+        font-size: calc(112.5% + 4 * (100vw - 414px) / 586);
+        font-size: calc(18px + 4 * (100vw - 414px) / 586);
+    }
+}
+@media screen and (min-width: 1000px) {
+    html {
+        font-size: calc(137.5% + 6 * (100vw - 1000px) / 1000);
+        font-size: calc(22px + 6 * (100vw - 1000px) / 1000);
+    }
+}*/
+
 .bobo-wrap {
 	font-family: sans-serif;
-	font-size: medium;
 	line-height: 1.5;
 }
