--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,82 +1,87 @@
 @charset 'UTF-8';
 
+/*
+$dark = #141414;
+$ss = sans-serif;
+ */
 body, p, h1, h2, h3, h4, h5, h6, ul, dl, ol, dd, form {
-	margin: 0;
+    margin: 0;
 }
 ul, ol {
-	list-style: none;
-	padding: 0;
+    list-style: none;
+    padding: 0;
 }
 
 a {
-	color: inherit;
-	text-decoration: none;
+    color: inherit;
+    text-decoration: none;
 }
 
 img {
-	border: 0;
+    border: 0;
 }
 
 h1, h2, h3, h4, h5, h6, input, textarea, select {
-	font-size: 100%;
+    font-size: 100%;
 }
 input, textarea, select {
-	font-family: inherit;
+    font-family: inherit;
 }
 
 @media screen and (max-width: 1024px) {
 	body {
-		-webkit-tap-highlight-color:rgba(0,0,0,0);
-		-webkit-user-select: none;
-		-webkit-text-size-adjust: none;
-		-webkit-touch-callout: none;
-	}
+        -webkit-tap-highlight-color:rgba(0,0,0,0);
+        -webkit-user-select: none;
+        -webkit-text-size-adjust: none;
+        -webkit-touch-callout: none;
+    }
 }
 
 [hidden] {
-	display: none;
+    display: none;
 }
 
 /* 如果是移动端页面，需要使用rem单位，可以放开下面注释，无需JS，?px/16进行转换，例如20px=1.25rem */
 /*@media screen and (min-width: 375px) {
     html {
-        font-size: calc(100% + 2 * (100vw - 375px) / 39);
-        font-size: calc(16px + 2 * (100vw - 375px) / 39);
+        font-size: calc(100% + 2px * (100vw - 375px) / 39);
+        font-size: calc(16px + 2px * (100vw - 375px) / 39);
     }
 }
 @media screen and (min-width: 414px) {
     html {
-        font-size: calc(112.5% + 4 * (100vw - 414px) / 586);
-        font-size: calc(18px + 4 * (100vw - 414px) / 586);
+        font-size: calc(112.5% + 4px * (100vw - 414px) / 586);
+        font-size: calc(18px + 4px * (100vw - 414px) / 586);
     }
 }
 @media screen and (min-width: 1000px) {
     html {
-        font-size: calc(137.5% + 6 * (100vw - 1000px) / 1000);
-        font-size: calc(22px + 6 * (100vw - 1000px) / 1000);
+        font-size: calc(137.5% + 6px * (100vw - 1000px) / 1000);
+        font-size: calc(22px + 6px * (100vw - 1000px) / 1000);
     }
 }*/
 
 .bobo-wrap {
-	font-family: sans-serif;
-	line-height: 1.5;
+    font-family: sans-serif;
+    line-height: 1.5;
 }
 
 /* 脚手架页面示意CSS，纯演示，实际开发需删除 */
-.bobo-header { 
-	padding: 1%;
-	background-color: #141414;
-	color: #fff;
+.bobo-header {
+    padding: 1%;
+    background-color: #141414;
+    color: #fff;
 }
 .bobo-share {
-	color: #fff;
-	position: absolute;
-	top: 5px; right: 10px;
+    color: #fff;
+    position: absolute;
+    top: 5px;
+    right: 10px;
 }
 .bobo-footer {
-	background-color: #141414;
-	color: #fff;
-	text-align: center;
-	line-height: 20px;
-	padding: 20px 1em;
+    background-color: #141414;
+    color: #fff;
+    text-align: center;
+    line-height: 20px;
+    padding: 20px 1em;
 }
